--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "bootstrap-vue": "^2.23.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
